# Python2Verilog

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  _ZN8__main__3fibB2v1B40c8tJTIcFKzyF2ILShI4CrgQElQb6HcpCSitgEU0AEx  a.out  afsm.py  ast.txt  build.sh  generator.txt  genindex.html  index.html  main-stale.py  main.py  memory.py  memory.sv  memory_tb.sv  modulee.py  objects.inv  old.sv  output.txt  output1.txt  output_llvm.txt  py-modindex.html  pylint.toml  pyproject.toml  python.ll  python.py  python2verilog.api.html  python2verilog.backend.html  python2verilog.backend.verilog.html  python2verilog.exceptions.html  python2verilog.extern.html  python2verilog.frontend.html  python2verilog.html  (+10 more)
_modules/: index.html
_sources/: index.rst.txt  python2verilog.api.rst.txt  python2verilog.backend.rst.txt  python2verilog.backend.verilog.rst.txt  python2verilog.exceptions.rst.txt  python2verilog.extern.rst.txt  python2verilog.frontend.rst.txt  python2verilog.ir.rst.txt  python2verilog.optimizer.rst.txt  python2verilog.rst.txt  python2verilog.simulation.rst.txt  python2verilog.utils.rst.txt
data/: algebra_test.sv  hand_written_of_output.sv  iverilog_sus.sv
design/: general.md
docs/: conf.py  for_loop_limitation.md  generate.sh  index.rst  modules.rst  python2verilog.backend.rst  python2verilog.frontend.generator.html  python2verilog.frontend.html  python2verilog.frontend.rst  python2verilog.frontend.utils.html  python2verilog.html  python2verilog.ir.rst  python2verilog.optimizer.rst  python2verilog.parsers.generator.html  python2verilog.parsers.html  python2verilog.parsers.utils.html  python2verilog.rst  python2verilog.utils.rst
docs1/: conf.py  index.rst
examples/: .gitignore  README.md  cli_basic.py  decorator_advanced.ipynb  decorator_advanced.py  decorator_basic.py  decorators.py  notebook.ipynb  requirements.txt
live/: app.py
(+481 files in other folders)
