[project]
name = "python2verilog"
version = "0.0.1"
authors = [{ name = "Kerry Wang", email = "kerrywang369@gmail.com" }]
description = "Converts a subset of python generator functions into synthesizable sequential SystemVerilog"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/WorldofKerry/Python2Verilog/"
"Bug Tracker" = "https://github.com/WorldofKerry/Python2Verilog/issues"
